--- a/popup.html
+++ b/popup.html
@@ -11,10 +11,22 @@
     <script src="./scripts/popup.js"></script>
 </head>
 <body>
-    <div class="container text-lg-start">
-        <div id="not-printable-area" class="row pb-5">
-            <div class="col-6">
-                <button class="" id="get-data">Create Label</button>
+    <div class="container text-lg-center" style="height: auto; width: 300px">
+        <div id="not-printable-area">
+            <div class="row pb-5 justify-content-center">
+                <div class="col-6">
+                    <h5 id="version"></h5>
+                </div>
+            </div>
+            <div class="row pb-5 justify-content-center">
+                <div class="col-10">
+                    <h4 id="sku" style="text-align: center"></h4>
+                </div>
+            </div>
+            <div class="row pb-5 justify-content-center">
+                <div class="col-6">
+                    <button id="get-data" class="btn btn-success">Create Label</button>
+                </div>
             </div>
         </div>
     </div>
