--- a/label.html
+++ b/label.html
@@ -16,20 +16,23 @@
         </div>
     </div>
     <div id="printable-area" class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
-        <div class="col p-3 d-flex flex-column position-static" >
+        <div class="col-6 p-2 pt-4 d-flex flex-column position-static align-middle" >
             <div class="row align-content-center">
                 <div id="qr-code"></div>
             </div>
-            <div class="row">
-                <h6 class="mb-0">Scan to order more from same model</h6>
-            </div>
         </div>
-        <div class="col p-4 d-flex flex-column position-static">
-            <div class="row pb-2 align-content-start">
-                <h5 id="model"></h5>
+        <div class="col-6 pb-3 pt-3 pr-3 d-flex flex-column position-static">
+            <div class="row">
+                <h3 class="mb-0" style="font-weight: bold">Scan For Reordering</h3>
+            </div>
+            <div class="row">
+                <h5 class="mb-0">To reorder the same model design,simply scan this barcode.</h5>
+            </div>
+            <div class="row pt-5 mt-3 align-content-start">
+                <h4 class="mb-0" id="model" style="font-weight: bold"></h4>
             </div>
             <div class="row pb-2 align-content-start">
-                <h5 id="size"></h5>
+                <h4 id="size" style="font-weight: bold"></h4>
             </div>
         </div>
     </div>
